--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HTML TAG Sample IFRAME</title>
   </head>
   <body>
-     <h1>ラインフレームの活用事例</h1>
+     <h1>インラインフレームの活用事例</h1>
      <iframe src="https://www.example.com/index.html" width="480"></iframe>
   </body>
 </html>
